# Open-Deep-Research-Py

./: .env.local.example  .gitignore  README.md  pyproject.toml  report.md
src/: main.py
src/OpenWebUI/: pipedeepr.py  pipethinkerwrapper.py  thinkOpenRouter.py  tst.py
src/OpenWebUI/tests/: pipedeepr.py  pipethinkorwrapper2.py  pipev1.py
src/helpers/: logger.py
