[project]
name = "deeprpy"
version = "0.1.0"
description = "Deep Reserch Backend Fully in Python"
authors = [
    {name = "Ash Afshar",email = "arsha03@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.12,<4.0.0)",
    "openai (>=1.63.2,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
